Modifications HTML Ajout d'un input et d'un bouton permettant d'ajouter un produit en fonction de la quantité spécifiée

--- a/src/index.html
+++ b/src/index.html
@@ -34,27 +34,71 @@
 </nav>
 <div class="card-deck">
     <div class="card">
-        <img src="../ressoures/une-fiat.jpg" class="card-img-top" alt="...">
+        <img src="..." class="card-img-top" alt="ici une image">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">à partir de 199.500€</small></p>
+            <h5 class="card-title">Titre</h5>
+            <p class="card-text">J'avais pensé à mettre ici un petit descriptif</p>
+            <p class="card-text"><small class="text-muted">Ici le prix</small>
+                <input type="number" value="1" style="width: 50px">
+                <button class=" btn-dark" style="border-radius: 5px; width: ">+</button>
+            </p>
         </div>
     </div>
     <div class="card">
-        <img src="../ressoures/fiat-multipla-tuning-fuenfzylinder.jpg" class="card-img-top" alt="...">
+        <img src="..." class="card-img-top" alt="ici une image">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Titre</h5>
+            <p class="card-text">J'avais pensé à mettre ici un petit descriptif</p>
+            <p class="card-text"><small class="text-muted">Ici le prix</small>
+                <input type="number" value="1" style="width: 50px">
+                <button class=" btn-dark" style="border-radius: 5px; width: ">+</button>
+            </p>
         </div>
     </div>
     <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="..." class="card-img-top" alt="ici une image">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Titre</h5>
+            <p class="card-text">J'avais pensé à mettre ici un petit descriptif</p>
+            <p class="card-text"><small class="text-muted">Ici le prix</small>
+                <input type="number" value="1" style="width: 50px">
+                <button class=" btn-dark" style="border-radius: 5px; width: ">+</button>
+            </p>
+        </div>
+    </div>
+</div>
+<div class="card-deck">
+    <div class="card">
+        <img src="..." class="card-img-top" alt="ici une image">
+        <div class="card-body">
+            <h5 class="card-title">Titre</h5>
+            <p class="card-text">J'avais pensé à mettre ici un petit descriptif</p>
+            <p class="card-text"><small class="text-muted">Ici le prix</small>
+                <input type="number" value="1" style="width: 50px">
+                <button class=" btn-dark" style="border-radius: 5px; width: ">+</button>
+            </p>
+        </div>
+    </div>
+    <div class="card">
+        <img src="..." class="card-img-top" alt="ici une image">
+        <div class="card-body">
+            <h5 class="card-title">Titre</h5>
+            <p class="card-text">J'avais pensé à mettre ici un petit descriptif</p>
+            <p class="card-text"><small class="text-muted">Ici le prix</small>
+                <input type="number" value="1" style="width: 50px">
+                <button class=" btn-dark" style="border-radius: 5px; width: ">+</button>
+            </p>
+        </div>
+    </div>
+    <div class="card">
+        <img src="..." class="card-img-top" alt="ici une image">
+        <div class="card-body">
+            <h5 class="card-title">Titre</h5>
+            <p class="card-text">J'avais pensé à mettre ici un petit descriptif</p>
+            <p class="card-text"><small class="text-muted">Ici le prix</small>
+                <input type="number" value="1" style="width: 50px">
+                <button class=" btn-dark" style="border-radius: 5px; width: ">+</button>
+            </p>
         </div>
     </div>
 </div>
